# SimpleGameEngine

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/assets/Shaders/: imgui.shader  terrain.shader  test.shader  test2.shader
src/core/: CMakeLists.txt  sgebase.h  sgecore.h  sgemacro.h
src/core/app/: AppBase.cpp  AppBase.h  ConsoleApp.h  ProjectSettings.cpp  ProjectSettings.h
src/core/error/: Error.h
src/core/log/: Log.h
src/core/math/: Vec2.h
src/core/nativeui/: NativeUI.cpp  NativeUI.h
src/core/nativeui/base/: NativeUIAppBase.h  NativeUIWindowBase.cpp  NativeUIWindowBase.h
src/core/nativeui/win32/: NativeUIAppWin32.cpp  NativeUIAppWin32.h  NativeUIWindowWin32.cpp  NativeUIWindowWin32.h  Win32Util.h
src/core/sgecore/: BitUtil.h  ByteOrder.h  Object.cpp  Object.h
src/core/sgecore/allocator/: LinearAllocator.cpp  LinearAllocator.h
src/core/sgecore/detect_platform/: sge_detect_compiler_vc.h  sge_detect_platform.h
src/core/sgecore/error/: Error.cpp  Error.h
src/core/sgecore/file/: Directory.cpp  Directory.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FileReader.h  FileStream.cpp  FileStream.h  MemMapFile.cpp  MemMapFile.h
src/core/sgecore/graph/: Color.h  ColorUtil.h  Texture2D.cpp  Texture2D.h
src/core/sgecore/input/: UIMouseEvent.h
src/core/sgecore/log/: Log.cpp  Log.h
src/core/sgecore/math/: Mat4.cpp  Mat4.h  Mat4_Basic.h  Mat4_SSE.h  Math.h  MathCamera3.cpp  MathCamera3.h  MathGeometry.h  Quat4.cpp  Quat4.h  Ray3.cpp  Ray3.h  Rect2.h  Tuple2.h  Tuple3.h  Tuple4.h  Vec2.cpp  Vec2.h  Vec2_Basic.h  Vec2_SSE.h  Vec3.cpp  Vec3.h  Vec3_Basic.h  Vec3_SSE.h  Vec4.cpp  Vec4.h  Vec4_Basic.h  Vec4_SSE.h
src/core/sgecore/pointer/: ComPtr.h  SPtr.h
src/core/sgecore/reflection/: FieldInfo.cpp  FieldInfo.h  Reflection.cpp  Reflection.h  TypeInfo.cpp  TypeInfo.h
src/core/sgecore/serializer/binary/: BinDeserializer.h  BinSerializer.h
src/core/sgecore/serializer/json/: JsonDeserializer.h  JsonSerializer.h  JsonUtil.h
src/core/sgecore/string/: Fmt.h  Lexer.cpp  Lexer.h  String.cpp  String.h  UtfUtil.h
src/core/sgecore/unit_test/: UnitTest.cpp  UnitTest.h
src/core/string/: Fmt.h  String.h
src/core/unit_test/: UnitTest.cpp  UnitTest.h
src/editor/: CMakeLists.txt  sgeeditor-pch.h  sgeeditor.h
src/editor/nativeui/base/: NativeUIAppBase.cpp  NativeUIAppBase.h  NativeUIWindowBase.h
src/editor/nativeui/win32/: NativeUIAppWin32.cpp  NativeUIWindowWin32.cpp  NativeUIWindowWin32.h
src/editor/sgeeditor/: EditorContext.cpp  EditorContext.h  EditorHierarchyWindow.cpp  EditorHierarchyWindow.h  EditorInspectorWindow.cpp  EditorInspectorWindow.h  EditorPropertyDrawer.cpp  EditorPropertyDrawer.h  EditorUI.h  EditorWindow.h  EntitySelection.cpp  EntitySelection.h
src/editor/shader_compiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderInfo.h  ShaderParser.cpp  ShaderParser.h
src/engine/: CMakeLists.txt  sgeengine.h
src/engine/sgeengine/: EngineContext.cpp  EngineContext.h
src/engine/sgeengine/ECS/: Component.cpp  Component.h  ComponentSystem.cpp  ComponentSystem.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/render/: CMakeLists.txt  RenderContext.cpp  RenderContext.h  RenderDataType.h  Renderer.cpp  Renderer.h  render-pch.h  sgerender.h
src/render/DirectX11/: Common.h  DirectX11RenderContext.cpp  DirectX11RenderContext.h  DirectX11Renderer.cpp  DirectX11Renderer.h
src/render/OpenGL/: OpenGL_Win32_Renderer.cpp  OpenGL_Win32_Renderer.h
src/render/base/: RendererBase.h
src/render/buffer/: RenderGpuBuffer.h
src/render/command/: EditMesh.h  Mesh.cpp  Mesh.h  RenderCommand_Draw.h  RenderMesh.cpp  RenderMesh.h  VertexLayout.cpp  VertexLayout.h
src/render/graphic_api/DirectX11/: DirectX11_Common.h  DirectX11_RenderContext.cpp  DirectX11_RenderContext.h  DirectX11_RenderGpuBuffer.cpp  DirectX11_RenderGpuBuffer.h  DirectX11_Renderer.cpp  DirectX11_Renderer.h
src/render/graphic_api/OpenGL/: OpenGL_Win32_Renderer.h
src/render/mesh/: EditMesh.cpp  EditMesh.h  RenderMesh.cpp  RenderMesh.h
src/render/mesh/reader/: WavefrontObjLoader.cpp  WavefrontObjLoader.h  WavefrontObjReader .h  WavefrontReader.cpp
src/render/sgerender/: ImGui_SGE.cpp  ImGui_SGE.h  RenderCommon.h  RenderContext.cpp  RenderContext.h  RenderDataType.h  Renderer.cpp  Renderer.h
src/render/sgerender/buffer/: RenderGpuBuffer.cpp  RenderGpuBuffer.h
src/render/sgerender/command/: RenderCommand.cpp  RenderCommand.h  RenderCommand_Draw.h  RenderRequest.cpp  RenderRequest.h
src/render/sgerender/material/: Material.cpp  Material.h
src/render/sgerender/mesh/: EditMesh.cpp  EditMesh.h  RenderMesh.cpp  RenderMesh.h  RenderTerrain.cpp  RenderTerrain.h  Terrain.cpp  Terrain.h
src/render/sgerender/shader/: RenderState.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h  (+1 more)
src/render/vertex/: Vertex.h  VertexLayoutManager.cpp  VertexLayoutManager.h
src/shader_compiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerApp.cpp  ShaderCompiler_DX11.cpp  ShaderCompiler_DX11.h  ShaderLayout.cpp  ShaderLayout.h  ShaderParser.cpp  ShaderParser.h
(+37 files in other folders)
