set(PROJECT_NAME SimpleGameEngineCore)
message("==== ${PROJECT_NAME} ====")
project(${PROJECT_NAME})

file(GLOB_RECURSE src_files "${CMAKE_CURRENT_SOURCE_DIR}/*.*")
foreach(FILE ${src_files})
    get_filename_component(PARENT_DIR "${FILE}" PATH)
    file(RELATIVE_PATH PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} ${PARENT_DIR})
    string(REPLACE "/" "\\" GROUP "${PARENT_DIR}")
    set(GROUP "${GROUP}")
    source_group("${GROUP}" FILES "${FILE}")
endforeach()
add_library(${PROJECT_NAME} ${src_files})
set_target_properties(${PROJECT_NAME} PROPERTIES UNITY_BUILD ON UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 32)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER SGE/Core)
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt EASTL nlohmann_json::nlohmann_json png)
sge_set_target_warning_level(${PROJECT_NAME})
